# ib-tax

./: IB-DB-Fill-Statements.ipynb  IB-DB-Fill-Tax-Info.ipynb  IB-DB-Fill-trades.ipynb  Tax.xml:Zone.Identifier  config.ini  create_closedpositions.sql  create_openposition.sql  create_statements.sql  create_trades.sql  database.py  db_utils.py  helper.py  main.py  processing.py  pyproject.toml  tax_utils.py  validation.py
data/: 2023_data.xml
development/: config.ini  read_data.py  tax.py
development/archive/: read_data.py  tax.py
notebooks/: IB-DB-Fill-Statements.ipynb  IB-DB-Fill-trades.ipynb
sql/: create-db-template.sql  create_taxstatements.sql
