[tool.poetry]
name = "ib-tax"
version = "0.1.0"
description = ""
authors = ["Andre Ortner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
babel = "^2.14.0"
pymysql = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
